Get rid of deprecation warnig for Class#newInstance
Use log string formats while we are at it